# PyPolo

./: .gitignore  .readthedocs.yaml  LICENSE  N17E073.npy  README.md  download_data.py  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: workflows
.github/workflows/: build.yml  ci.yml  code_cov.yml  main.yml  test.yaml
archived/: __init__.py
archived/dynamics/: dubins_car.py  dynamics.py
archived/examples/: mount_st_helens.py  spline.py  uniform_grid.py
archived/experiments/: argparser.py  environments.py  logger.py  utilities.py  visualizer.py
archived/kernels/: __init__.py  ak.py  gibbs.py
archived/models/: gpr.py
archived/robots/: __init__.py  usv.py
archived/sensors/: ranger.py
archived/strategies/: active_sampling.py  strategy.py
archived/tests/: conftest.py
archived/utilities/: __init__.py  linalg.py  scalers.py
demo/: main.py
demo/data/: auv.stl  robot_mesh.stl
docs/: api.md  awesome.md  conf.py  contributing.md  framework.md  get_started.md  index.md  index.rst  installation.md  literature.md  requirements.txt  resources.md  run.sh
docs/developers/: class_diagram.md  contributing.md  controllers.md  framework.md  models.md  objectives.md  planners.md  robots.md  sensors.md  tasks.md
docs/ipl/: introduction.rst
docs/javascripts/: mathjax.js
docs/resources/: books.md  code.md  papers.md  thesis.md  videos.md  workshops.md
docs/tutorials/: gaussian_process_regression.md
docs/user/: introduction.rst  tutorials.rst
examples/: get_started.py  image.py
examples/outputs/: metrics.csv
notebooks/: Untitled.ipynb
pypolo/: __init__.py
pypolo/controllers/: __init__.py  base_controller.py  pid_controller.py
pypolo/dynamics/: __init__.py
pypolo/experiments/: __init__.py  argparser.py  environments.py  evaluator.py  utilities.py  visualizer.py
pypolo/kernels/: ak.py  dkl.py  kernel.py  nn.py  rbf.py  scaler.py
pypolo/models/: __init__.py  base_model.py  gpr.py  gpr_model.py  model.py  neural_gpr_model.py
pypolo/objectives/: __init__.py  entropy.py
pypolo/planners/: __init__.py  base_planner.py  myopic_planner.py  planner.py
pypolo/robots/: __init__.py  base_robot.py  differential_drive_robot.py  robot.py
pypolo/sensors/: __init__.py  base_sensor.py  environmental_sensor.py  sensor.py  sonar.py
pypolo/strategies/: __init__.py  bezier.py  myopic_planning.py  random_sampling.py
tests/: conftest.py
(+31 files in other folders)
