[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pypolo"
version = "0.0.3"
authors = [
  { name="Weizhe (Wesley) Chen", email="wchen.robotics@outlook.com" },
]
description = "A Python Library for Informative Planning and Uncertainty-Aware Learning"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pypolo.readthedocs.io"
"Bug Tracker" = "https://github.com/Weizhe-Chen/PyPolo/issues"
