[tool.poetry]
name = "pypolo"
version = "0.0.3"
description = "A Python Library for Robotic Information Gathering"
authors = ["Weizhe Chen <chenweiz@iu.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.2"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
bezier = "^2021.2.12"
tqdm = "^4.64.1"
configargparse = "^1.5.3"
scikit-image = "^0.19.3"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
Sphinx = "^5.3.0"
pytest = "^7.2.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
