[metadata]
name = pypolo
version = 0.0.1
author = Weizhe (Wesley) Chen
author_email = chenweiz@iu.edu
description = A library for research and education on information-driven learning and planning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Weizhe-Chen/pypolo
project_urls =
    Bug Tracker = https://github.com/Weizhe-Chen/pypolo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
