[metadata]
name = pypolo
version = 0.0.3
author = Weizhe (Wesley) Chen
author_email = wchen.robotics@outlook.com
description = A Python Library for Informative Planning and Uncertainty-Aware Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Weizhe-Chen/pypolo
project_urls =
    Bug Tracker = https://github.com/Weizhe-Chen/pypolo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
